--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".record.VideoActivity"/>
+        <activity android:name=".contribution.record.VideoActivity"/>
     </application>
 
 </manifest>
