--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
     package="com.example.greentea.fteam">
 
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.hardware.camera.autoforcus" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- インターネット通信を行うため必要 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- アカウント情報を取得するため必要 -->
@@ -35,11 +36,13 @@
                 android:value="@integer/google_play_services_version" />
         </activity>
         <activity android:name=".contribution.record.VideoActivity">
+
             <!-- Google Play Serviceを利用するため必要 -->
             <meta-data
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version" />
         </activity>
+        <activity android:name=".Login.LoginActivity"></activity>
     </application>
 
 </manifest>
