--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
-#Thu Nov 01 15:35:13 JST 2018
-=======
-#Wed Nov 21 13:34:49 JST 2018
->>>>>>> origin/minami/dev3
+#Sun Jan 20 13:29:05 JST 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+>>>>>>>=origin/minami/dev3
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.1-all.zip
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
