--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
 
         <activity android:name=".PanelActivity" />
 
-        <activity android:name=".contribution.record.YoutubeActivity" />
+        <activity android:name=".comp.YoutubeActivity" />
 
         <activity android:name=".signIn.PleaseSignInActivity" />
     </application>
