--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
 
     // 画像処理用ライブラリ
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:mediarouter-v7:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
